# fastapi-ddddocr

./: Dockerfile  README.md  pyproject.toml
fastapi_ddddocr/: app.py
fixtures/: config.example.yaml
