[tool.poetry]
name = "fastapi-ddddocr"
version = "0.1.0"
description = ""
authors = ["tpob <tpob@tpob.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
fastapi = "^0.115.0"
ddddocr = "^1.5.5"
pyyaml = "^6.0.2"
python-multipart = "^0.0.12"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
